--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".ProfileActivity"></activity>
         <activity android:name=".HomeActivity"></activity>
         <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".CategoryActivity"></activity>
     </application>
 
 </manifest>
