--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ android {
 
 dependencies {
 
+    implementation 'com.github.hardillb:MultiPartVolley:0.0.3'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -55,6 +57,8 @@ dependencies {
 
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.cardview:cardview:1.0.0"
+
+
 
 
 //    implementation 'com.android.volley:volley:1.1.0'
