--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         <activity android:name=".HomeActivity"></activity>
         <activity android:name=".RegisterActivity"></activity>
         <activity android:name=".CategoryActivity"></activity>
+        <activity android:name=".MypostActivity"></activity>
+        <activity android:name=".MoreActivity"></activity>
+        <activity android:name=".PostActivity"></activity>
     </application>
 
 </manifest>
