--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,14 @@ plugins {
     id 'kotlin-android-extensions'
 }
 
+
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+
+
+
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -11,6 +19,8 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+
 
     defaultConfig {
         applicationId "com.example.mtaaprojekt"
@@ -44,6 +54,7 @@ android {
     }
 }
 
+
 dependencies {
 
     implementation 'com.github.hardillb:MultiPartVolley:0.0.3'
@@ -55,7 +66,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.android.volley:volley:1.2.0'
     implementation 'com.android.volley:volley:1.1.1'
-
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.cardview:cardview:1.0.0"
 
