--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,13 @@ buildscript {
     }
 }
 
+
+buildscript {
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
+    }
+}
+
 allprojects {
     repositories {
         google()
