--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".PostActivity"></activity>
         <activity android:name=".AddpostActivity"></activity>
         <activity android:name=".AddcommentActivity"></activity>
+        <activity android:name=".EditpostActivity"></activity>
     </application>
 
 </manifest>
