--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".AddpostActivity"></activity>
         <activity android:name=".AddcommentActivity"></activity>
         <activity android:name=".EditpostActivity"></activity>
+        <activity android:name=".ForeignprofileActivity"></activity>
     </application>
 
 </manifest>
